SW-7855 Fixed: The sidebar will now be displayed on mobile

--- a/engine/Shopware/Themes/Frontend/Bare/frontend/_public/src/less/_components/offcanvas-menu.less
+++ b/engine/Shopware/Themes/Frontend/Bare/frontend/_public/src/less/_components/offcanvas-menu.less
@@ -1,5 +1,5 @@
 /** Main navigation of the storefront */
-.sidebar-main {
+body > .sidebar-main {
 	.unitze-variable(300, 16);
 	.unitize-width(300, 16);
 	.translate(~"-@{emValue}rem", 0);
